--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Ignore virtual environment and cache files
 .venv/
 __pycache__/
-.egg-info/
+src/shortest_path_indiction.egg-info/
 
 # MacOS specific files
 .DS_Store
