Implemented simulation of bender's algorithm with and without accurate model of attacker model.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pip install matplotlib
 pip install pyepo
 pip install torch
 pip install sklearn
+pip install tabulate
 # Install the package in editable mode
 pip install -e .
 
