Created notebook for simulating asymmetric SPNI with a predict-then-optimize framewrk (not smart, i.e., no optnet). Additionally, changed requirements.txt and created TODO list.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,7 @@
-# Terminal script for creating a virtual environment and installing dependencies
-# This script assumes you have Python 3 and pip installed.
-# Commands might differ on windows systems.
-
-# Create a virtual environment
-python3 -m venv .venv
-source .venv/bin/activate
-pip install --upgrade pip
-# Install required packages
-pip install numpy
-pip install networkx
-pip install matplotlib
-pip install pyepo
-pip install torch
-pip install sklearn
-pip install tabulate
-# Install the package in editable mode
-pip install -e .
-
+numpy
+networkx
+matplotlib
+pyepo
+torch
+scikit-learn
+tabulate
