Restructured code base. Started renaming files and updating notebooks. Finished updating Notebook Main_PyEPO.ipynb.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 # Ignore virtual environment and cache files
 .venv/
 __pycache__/
-src/shortest_path_indiction.egg-info/
+# src/shortest_path_indiction.egg-info/
+*.egg-info/
 
 # MacOS specific files
 .DS_Store
